base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo-app
  labels:
    app: gitops-demo-app
spec:
  selector:
    app: gitops-demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
